Update Product and Category